# CRDC-PreCheck

./: .env.template  .gitignore  .python-version  Makefile  PRD.md  README.md  backlog.md  data_model.md  pyproject.toml  pytest.ini  ruff.toml  sprint_plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py  types.py
apps/api/app/dependencies/: __init__.py  auth.py  tenancy.py
apps/api/app/routers/: __init__.py  admin.py  auth.py  connectors.py  districts.py  evidence.py  exceptions.py  exports.py  health.py  imports.py  readiness.py  rule_results.py  rule_runs.py  rule_versions.py  schools.py  students.py
apps/api/app/schemas/: __init__.py  auth.py  common.py  connectors.py  districts.py  evidence.py  exceptions.py  imports.py  readiness.py  rules.py  schools.py  students.py
apps/api/app/services/: audit.py  students.py
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
apps/web/__tests__/: exceptions.test.tsx  import.test.tsx  login.test.tsx  page.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/worker/: __init__.py  app.py  tasks.py
infra/db/: README.md  alembic.ini
infra/docker/: README.md  compose.yml
infra/grafana/: README.md
prompts/: module_scaffold.md
samples/powerschool/: students.json
scripts/: seed_synthetic.py
tests/api/: test_auth_and_admin.py  test_health.py  test_imports_and_connectors.py  test_rule_run_flow.py
tests/rules/: test_evaluator.py
(+13 files in other folders)
