[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crdc-precheck-api"
version = "0.1.0"
description = "FastAPI service for CRDC PreCheck"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "celery>=5.3,<6.0",
    "fastapi>=0.110,<1.0",
    "pydantic>=2.6,<3.0",
    "python-multipart>=0.0.9,<0.0.10",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "uvicorn[standard]>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.3,<25.0",
    "mypy>=1.9,<2.0",
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.3,<1.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
exclude = ["tests"]
