[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crdc-precheck-worker"
version = "0.1.0"
description = "Celery worker for CRDC PreCheck background tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "boto3>=1.34,<2.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.3,<25.0",
    "mypy>=1.9,<2.0",
    "pytest>=8.1,<9.0",
    "ruff>=0.3,<1.0"
]

[tool.setuptools]
package-dir = {"" = "worker"}

[tool.setuptools.packages.find]
where = ["worker"]
exclude = ["tests"]
